<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_shops"
        android:enabled="true"
        android:icon="@drawable/ic_shops_24"
        android:title="@string/general_text_shops" />
    <item
        android:id="@+id/page_basket"
        android:enabled="true"
        android:icon="@drawable/ic_basket_24"
        android:title="@string/general_text_basket" />

    <item
        android:id="@+id/page_orders"
        android:enabled="true"
        android:icon="@drawable/ic_orders_24"
        android:title="@string/general_text_orders" />

    <item
        android:id="@+id/page_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/general_text_profile" />
</menu>